# Brazilian-E-Commerce-Data-Pipeline-with-AWS

./: .gitignore  README.md  pyproject.toml
airflow/: Dockerfile  Makefile  docker-compose.yaml  requirements.txt
airflow/dags/: .env.example  full_pipeline.py
airflow/scripts/: .env.example  glue_load_rds_to_s3.py  load_s3_to_redshift_raw.py
dbt/: .user.yml  Makefile  dbt_project.yml  profiles.yml  pyproject.toml
dbt/models/mart/: dim_customers.sql  dim_products.sql  fct_orders.sql
dbt/models/mart/marketing/: mart_customer_segments.sql
dbt/models/staging/: _sources.yml  stg_customers.sql  stg_geolocation.sql  stg_leads_closed.sql  stg_leads_qualified.sql  stg_order_items.sql  stg_order_payments.sql  stg_order_reviews.sql  stg_orders.sql  stg_product_category_name_translation.sql  stg_products.sql  stg_sellers.sql
rds/: .env.example  Makefile  export_sqlite.py  transform.py
rds/credentials/: data-pipeline-key.pem.example
terraform/: Makefile  ec2.tf  iam.tf  network.tf  outputs.tf  provider.tf  rds.tf  redshift.tf  s3.tf  security.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
