[project]
name = "data-pipeline-aws-terraform"
version = "0.1.0"
description = ""
authors = [
    {name = "woramate-pongsa",email = "woramate.pong@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core (>=1.10.13,<2.0.0)",
    "dbt-postgres (>=1.9.1,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "dbt-redshift (>=1.9.5,<2.0.0)",
    "s3fs (>=2025.10.0,<2026.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
