[project]
name = "dbt"
version = "0.1.0"
description = ""
authors = [
    {name = "woramate-pongsa",email = "woramate.pong@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core (>=1.10.15,<2.0.0)",
    "dbt-redshift (>=1.9.5,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
